welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: '<-' expected but ')' found.
	for (i<--1 to nums.length-4) {
                                   ^noTriples:8: error: illegal start of simple expression
} 
^